<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".Activities.EditProfileActivity">

    <View
        android:id="@+id/focus_thief"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:gravity="left"
                    android:alpha="1"
                    android:text="@string/tx_edit_reg"
                    android:textColor="@color/colorAccent"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/wg_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp">

                    <EditText
                        android:id="@+id/ip_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tx_nombre"
                        android:inputType="text"
                        android:textColorHighlight="@color/colorPrimary"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/wg_lastnane"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp">

                    <EditText
                        android:id="@+id/ip_lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tx_apellido"
                        android:inputType="text"
                        android:textColorHighlight="@color/colorPrimary"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/wg_dni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp">

                    <EditText
                        android:id="@+id/ip_dni"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tx_dni"
                        android:inputType="text"
                        android:textColorHighlight="@color/colorPrimary"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/wg_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp">

                    <EditText
                        android:id="@+id/ip_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tx_correo"
                        android:inputType="textEmailAddress"
                        android:textColorHighlight="@color/colorPrimary"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/wg_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp">

                    <EditText
                        android:id="@+id/ip_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tx_password"
                        android:inputType="textPassword"
                        android:textColorHighlight="@color/colorPrimary"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/wg_password_dup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp">

                    <EditText
                        android:id="@+id/ip_password_dup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tx_repite_pw"
                        android:inputType="textPassword"
                        android:textColorHighlight="@color/colorPrimary"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/wg_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp">

                    <EditText
                        android:id="@+id/ip_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tx_telefono"
                        android:inputType="text"
                        android:textColorHighlight="@color/colorPrimary"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_reg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:padding="12dp"
                    android:text="@string/tx_edit_ok"
                    android:textColor="@color/colorWhite"
                    android:backgroundTint="@color/colorAccent"
                    android:onClick="tryUpdate"
                    />

                <TextView android:id="@+id/link_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/tx_cancelar"
                    android:textStyle="normal"
                    android:textColor="@color/colorLink"
                    android:gravity="center"
                    android:textSize="16dip"
                    android:onClick="returntemp"
                    android:layout_marginBottom="24dp"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>