<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".Activities.CreateMsgActivity">

    <View
        android:id="@+id/focus_thief"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/ad_tag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:gravity="left"
                    android:alpha="1"
                    android:text="@string/tx_create_msg"
                    android:textColor="@color/colorAccent"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ad_tittle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp">

                    <EditText
                        android:id="@+id/in_msg_tittle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ad_tittle"
                        android:inputType="text"
                        android:textColorHighlight="@color/colorPrimary"/>

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/ad_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="0dp">

                    <EditText
                        android:id="@+id/in_msg_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/tx_create_msg"

                        android:inputType="textMultiLine"
                        android:textColorHighlight="@color/colorPrimary"

                        android:lines="10"
                        android:minLines="8"
                        android:gravity="top|left"
                        android:maxLines="12"
                        android:scrollbars="vertical"/>

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_reg_msg"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/tx_create_ok"
                        android:onClick="sendmsg"
                        android:textColor="@color/colorWhite"
                        android:backgroundTint="@color/colorAccent"
                        />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_cancel_msg"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/tx_cancelar"
                        android:onClick="cancelMsg"
                        android:textColor="@color/colorWhite"
                        android:backgroundTint="@color/colorRed"
                        />

                </LinearLayout>




            </LinearLayout>


        </ScrollView>

    </LinearLayout>



</android.support.constraint.ConstraintLayout>